# Tasks2Bookstack

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  pyproject.toml  requirements.txt
src/tasks2bookstack/: bookstack.py  caldav.py  config.py  log.py  main.py
